--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hardillb/node-red-contrib-basic-logic"
+  },
+  "bugs" : {
+    "url": "https://github.com/hardillb/node-red-contrib-basic-logic/issues"
+  },
   "keywords": [
     "Node-RED"
   ],
